# nolog

./: CMakeLists.txt
include/: nolog.h
src/: log_queue.c  log_queue.h  log_thread.h  log_thread_linux.c  log_thread_win32.c  nolog.c  platform.h  types.h
test/: test.c
